[package]
name = "frame-decode"
version = "0.0.1"
edition = "2021"
description = "Decode extrinsics and storage from Substrate based chains"
license = "Apache-2.0"
repository = "https://github.com/paritytech/frame-decode"
documentation = "https://docs.rs/frame-decode"
homepage = "https://www.parity.io/"

[dependencies]
frame-metadata = { version = "16.0.0", features = ["legacy"] }
hex = "0.4.3"
parity-scale-codec = "3.6.12"
scale-decode = "0.13.1"
scale-info = "2.11.3"
scale-info-legacy = "0.2.0"
scale-type-resolver = "0.2.0"
scale-value = "0.16.2"
sp-crypto-hashing = "0.1.0"
