[package]
name = "frame-decode-tester"
version = "0.1.0"
edition = "2024"
description = "Testing utility for frame-decode against live Substrate chains"
license = "Apache-2.0"
repository = "https://github.com/paritytech/frame-decode"

[dependencies]
frame-decode = { path = "..", features = ["legacy", "legacy-types", "error-tracing"] }
frame-metadata = { version = "23.0.0", features = ["legacy", "current"] }
hex = "0.4.3"
parity-scale-codec = "3.6.12"
scale-info-legacy = "0.4.0"
scale-type-resolver = "0.2.0"
scale-value = "0.18.0"
subxt = "0.41.0"
subxt-rpcs = "0.41.0"
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
